# deep-learning-studies

./: .gitignore  diabetes_manual.py  insurance_ml.py  ml_generica.py  pyproject.toml  readme.md  trainning_ml.py
Convolutionals/: dog_cat.py
MultipleLayers/: fashion_mnist.py  finetunning.py  stroke.py
One Layer/: cardio.py  diabetes.py  digits.py  titanic.py
Recurrents/: stocks.py
